--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
     "dev:debug": "nodemon --inspect src/server"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
