--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
     "dev:debug": "nodemon --inspect src/server"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
