:bug: :package: Adicionando eslint e prettier ao projeto. Corrigindo erros encontrados.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "0.21.1",
+    "craco-alias": "2.2.0",
     "formik": "^2.2.6",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
@@ -46,6 +47,16 @@
     ]
   },
   "devDependencies": {
-    "craco-alias": "2.2.0"
+    "babel-eslint": "10.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-plugin-import": "2.23.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "2.3.0"
   }
 }
