--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "0.21.1",
     "craco-alias": "2.2.0",
     "formik": "^2.2.6",
+    "jsonwebtoken": "8.5.1",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
