--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,36 +9,38 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.9.4",
+    "@react-navigation/stack": "5.14.5",
     "axios": "0.21.1",
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "7.9.0",
+    "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.0"
+    "eslint": "7.27.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "prettier": "2.3.0"
   },
   "private": true
 }
