--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "axios": "0.21.1",
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "~41.0.1",
+    "expo-constants": "10.1.3",
     "expo-status-bar": "~1.0.4",
     "prop-types": "15.7.2",
     "react": "16.13.1",
@@ -25,18 +26,19 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
-    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
+    "react-native-svg-transformer": "^0.14.3",
     "@babel/core": "7.9.0",
     "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
     "eslint": "7.27.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-babel-module": "5.3.1",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
