--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "~41.0.1",
     "expo-constants": "10.1.3",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "prop-types": "15.7.2",
     "react": "16.13.1",
@@ -31,7 +32,6 @@
     "styled-components": "5.3.0"
   },
   "devDependencies": {
-    "react-native-svg-transformer": "^0.14.3",
     "@babel/core": "7.9.0",
     "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
@@ -44,7 +44,8 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.3.0"
+    "prettier": "2.3.0",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
 }
