--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-circle-checkbox": "^0.1.6",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
