--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "expo-constants": "10.1.3",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "lottie-react-native": "3.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
