--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "expo": "~41.0.1",
     "expo-constants": "10.1.3",
     "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "3.5.0",
     "prop-types": "15.7.2",
