--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "axios": "0.21.1",
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "~41.0.1",
+    "expo-blur": "~9.0.3",
     "expo-constants": "10.1.3",
     "expo-font": "~9.1.0",
     "expo-linear-gradient": "~9.1.0",
@@ -24,7 +25,6 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
