--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
