--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~9.1.0",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "lottie-react-native": "3.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
@@ -33,7 +34,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "5.3.0",
-    "styled-theming": "^2.2.0"
+    "styled-theming": "^2.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
