--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
     "axios": "0.21.1",
