--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fast-crc32c": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
