--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,14 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.2",
     "sucrase": "^3.17.1"
   }
 }
