--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.14.7",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
