--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "6.1.1",
-    "@material-ui/core": "^4.11.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
