--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "6.1.1",
+    "@babel/eslint-parser": "^7.14.7",
+    "@craco/craco": "6.2.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
     "axios": "0.21.1",
-    "craco-alias": "2.2.0",
-    "formik": "^2.2.6",
+    "craco-alias": "3.0.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "8.5.1",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-dropzone": "11.3.2",
+    "react-dropzone": "11.3.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "styled-components": "5.2.3",
-    "web-vitals": "^1.0.1",
+    "styled-components": "5.3.0",
+    "web-vitals": "^2.1.0",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -51,16 +52,15 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.23.3",
+    "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "2.3.0"
+    "prettier": "2.3.2"
   }
 }
