--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
     "axios": "0.21.1",
+    "better-react-mathjax": "^1.0.2",
     "craco-alias": "3.0.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "8.5.1",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "11.3.4",
+    "react-mathjax-preview": "^2.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.0",
