:lipstick: Criando pagina de visualizar todas as tentativas do quiz.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "author": "jhonatancunha <jhonatancunha@alunos.utfpr.edu.br>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server",
+    "start": "nodemon src/server",
     "dev:debug": "nodemon --inspect src/server"
   },
   "dependencies": {
