--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "~42.0.0",
     "expo-blur": "~9.0.3",
+    "expo-clipboard": "~1.1.0",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
