--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,16 @@
-FROM node:alpine
-WORKDIR /usr/app
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 3000
-CMD [ "npm", "start" ]
+FROM node:lts-alpine
+
+RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
+
+WORKDIR /home/node/api
+
+COPY ./package*.json .
+
+RUN apk update && apk add python3 make g++
+RUN yarn
+
+USER node
+
+COPY --chown=node:node . .
+
+EXPOSE 3333
