--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,48 @@
-version: '3.8'
+version: '3'
+
+networks:
+  app-tier:
+    driver: bridge
 
 services:
   db:
-    container_name: 'mysql'
+    container_name: 'db'
     image: mysql:8.0.25
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - '3308:3306'
-    expose:
-      - "3308"
+      - '3307:3306'
     volumes:
-      - .:/usr/mysql
+      - ./.docker/dbdata:/var/ib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=mortadela1
       - MYSQL_DATABASE=db_quiz
+      - MYSQL_ROOT_PASSWORD=mortadela1
+    networks:
+      - app-tier 
 
   backend:
     container_name: 'back_end'
-    build:
-      context: backend
+    command: yarn sequelize db:migrate
+    command: yarn start
+    build: 
+      context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - .:/usr/app
+      - ./backend:/home/node/api
     ports:
       - '3333:3333'
     depends_on:
       - db
     environment:
       - DB_HOST=db
-      - DB_PORT=3308
+      - DB_PORT=3307
       - DB_USER=root
       - DB_PASS=mortadela1
       - DB_NAME=db_quiz
       - DB_DIALECT=mysql
-      - WAIT_HOSTS=db:3308
+    networks:
+      - app-tier 
+
+    
   
   
