:whale: Atualizando docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
 
   backend:
     container_name: 'back_end'
+    command: yarn sequelize db:migrate
+    command: yarn start
     build: 
       context: ./backend
       dockerfile: Dockerfile
