--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 
-RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
+RUN mkdir -p /home/node/api && chown -R node:node /home/node/api
 
 WORKDIR /home/node/api
 
