--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,44 @@ services:
       - DB_NAME=db_quiz
       - DB_DIALECT=mysql
     networks:
+      - app-tier
+
+  backend:
+    container_name: 'back_end'
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend:/home/node/api
+    ports:
+      - '3333:3333'
+    depends_on:
+      - db
+    restart: on-failure
+    environment:
+      - DB_HOST=db
+      - DB_PORT=3307
+      - DB_USER=root
+      - DB_PASS=quizutfpr
+      - DB_NAME=db_quiz
+      - DB_DIALECT=mysql
+    networks:
       - app-tier 
 
+  frontend:
+    container_name: 'front_end'
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./frontend:/home/node/react
+    ports:
+      - '3000:3000'
+    depends_on:
+      - backend
+    restart: on-failure
+    networks:
+      - app-tier
     
   
   
