--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 
-RUN mkdir -p /home/node/react && chown -R node:node /home/node/react
+RUN mkdir -p /home/node/react/node_modules && chown -R node:node /home/node/react
 
 WORKDIR /home/node/react
 
