--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,11 +13,11 @@ services:
     ports:
       - '3307:3306'
     volumes:
-      - ./.docker/dbdata_dev:/var/ib/mysql
+      - ~/mysql:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=quizutfpr
       - MYSQL_PASSWORD=quizutfpr
-      - MYSQL_DATABASE=db_quiz
+      - MYSQL_DATABASE=db_dev
     networks:
       - app-tier 
 
@@ -28,6 +28,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/home/node/api
+      - /home/node/api/node_modules
     ports:
       - '3333:3333'
     depends_on:
@@ -35,10 +36,10 @@ services:
     restart: on-failure
     environment:
       - DB_HOST=db
-      - DB_PORT=3307
+      - DB_PORT=3306
       - DB_USER=root
       - DB_PASS=quizutfpr
-      - DB_NAME=db_quiz
+      - DB_NAME=db_dev
       - DB_DIALECT=mysql
     networks:
       - app-tier
@@ -51,6 +52,7 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./frontend:/home/node/react
+      - /home/node/react/node_modules
     ports:
       - '3000:3000'
     depends_on:
