--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,11 +13,11 @@ services:
     ports:
       - '3307:3306'
     volumes:
-      - ./.docker/dbdata:/var/ib/mysql
+      - ~/mysql:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=quizutfpr
       - MYSQL_PASSWORD=quizutfpr
-      - MYSQL_DATABASE=db_quiz_prod
+      - MYSQL_DATABASE=db_prod
     networks:
       - app-tier 
 
@@ -29,16 +29,16 @@ services:
     volumes:
       - ./backend:/home/node/api
     ports:
-      - '3333:3333'
+      - '3330:3333'
     depends_on:
       - db
     restart: on-failure
     environment:
       - DB_HOST=db
-      - DB_PORT=3307
+      - DB_PORT=3306
       - DB_USER=root
       - DB_PASS=quizutfpr
-      - DB_NAME=db_quiz_prod
+      - DB_NAME=db_prod
       - DB_DIALECT=mysql
     networks:
       - app-tier
