--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,10 +1,14 @@
 {
   "expo": {
-    "name": "mobile",
+    "name": "Quiz UTFPR",
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "platforms": [
+      "ios", 
+      "android"
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -15,9 +19,11 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.utfpr.quizutfpr"
     },
     "android": {
+      "package": "com.utfpr.quizutfpr",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
