--- a/backend/package.json
+++ b/backend/package.json
@@ -6,20 +6,24 @@
   "author": "jhonatancunha <jhonatancunha@alunos.utfpr.edu.br>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/server",
+    "start:dev": "nodemon src/server",
+    "start:prod": "sucrase-node src/server.js",
     "dev:debug": "nodemon --inspect src/server"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fast-crc32c": "^2.0.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "sucrase": "^3.17.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -30,7 +34,6 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.2",
-    "sucrase": "^3.17.1"
+    "prettier": "^2.3.2"
   }
 }
