--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - '3307:3306'
     volumes:
-      - ~/mysql:/var/lib/mysql
+      - ./mysql_prod:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=quizutfpr
       - MYSQL_PASSWORD=quizutfpr
@@ -25,11 +25,12 @@ services:
     container_name: 'back_end'
     build: 
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     volumes:
       - ./backend:/home/node/api
+      - /home/node/api/node_modules
     ports:
-      - '3330:3333'
+      - '3333:3333'
     depends_on:
       - db
     restart: on-failure
@@ -40,6 +41,9 @@ services:
       - DB_PASS=quizutfpr
       - DB_NAME=db_prod
       - DB_DIALECT=mysql
+      - APP_URL=http://localhost:3333
+      - SECRET=teste
+      - EXPIRE_IN=2d
     networks:
       - app-tier
 
@@ -47,7 +51,7 @@ services:
     container_name: 'front_end'
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - '80:80'
     depends_on:
