--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,8 +1,8 @@
 FROM node:lts-alpine
 
-RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
+RUN mkdir -p /home/node/api_prod/node_modules && chown -R node:node /home/node/api_prod
 
-WORKDIR /home/node/api
+WORKDIR /home/node/api_prod
 
 COPY ./package*.json .
 
