--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -11,10 +11,11 @@ COPY --chown=node:node . .
 ENV NODE_ENV production
 ARG API_URL
 ENV REACT_APP_BASE_URL $API_URL
+ENV GENERATE_SOURCEMAP false
 
 RUN yarn build
 
-FROM nginx
+FROM nginx:1.21.1-alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=builder /home/node/react_prod/build .
 RUN rm /etc/nginx/conf.d/default.conf
