--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.1.9",
     "axios": "0.21.1",
     "better-react-mathjax": "^1.0.2",
+    "compress.js": "^1.1.2",
     "craco-alias": "3.0.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "8.5.1",
