--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,12 +1,12 @@
 FROM node:lts-alpine
 
-RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
+RUN sudo mkdir -p /home/node/api/node_modules && sudo chown -R node:node /home/node/api
 
 WORKDIR /home/node/api
 
 COPY ./package*.json .
 
-RUN apk update && apk add python3 make g++
+RUN sudo apk update && sudo apk add python3 make g++
 
 RUN yarn
 
