--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -1,13 +1,18 @@
 APP_URL=http://localhost:3333
 
-# Database
 
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
-DB_DIALECT=
+# CONFIGURAÇÃO CASO NÃO USAR O DOCKER
+DB_HOST="HOST_AQUI"
+DB_PORT="PORTA_MYSQL_AQUI"
+DB_USER="USUARIO_MYSQL_AQUI"
+DB_PASS="SENHA_DO_BANCO"
+DB_NAME="NOME_DO_BANCO"
+DB_DIALECT="mysql"
 
-SECRET=
-EXPIRE_IN=
+SECRET="SECRET_AQUI"
+EXPIRE_IN="DIAS_PARA_EXPIRAR_TOKEN"
+
+# LDAP CONFIG
+LDAP_URL="URL_LDAP_AQUI"
+LDAP_USERNAME="USUARIO_LDAP"
+LDAP_PASSWORD="SENHA_LDAP"
