--- a/backend/package.json
+++ b/backend/package.json
@@ -11,30 +11,30 @@
     "dev:debug": "nodemon --inspect src/server"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
+    "axios": "0.21.4",
+    "bcryptjs": "2.4.3",
+    "compression": "1.7.4",
     "cors": "2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "fast-crc32c": "^2.0.0",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0",
-    "sucrase": "^3.17.1",
-    "yup": "^0.32.9"
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "fast-crc32c": "2.0.0",
+    "helmet": "4.6.0",
+    "jsonwebtoken": "8.5.1",
+    "multer": "1.4.3",
+    "mysql2": "2.3.0",
+    "sequelize": "6.6.5",
+    "sequelize-cli": "6.2.0",
+    "sucrase": "3.20.1",
+    "yup": "0.32.9"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.3.2"
+    "@babel/eslint-parser": "7.15.7",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-prettier": "4.0.0",
+    "nodemon": "2.0.12",
+    "prettier": "2.4.1"
   }
 }
