:boom: Removendo mathJax para utilizar Katex.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,15 @@
     "@testing-library/react": "12.1.0",
     "@testing-library/user-event": "13.2.1",
     "axios": "0.21.4",
-    "better-react-mathjax": "1.0.3",
     "compress.js": "1.2.1",
     "craco-alias": "3.0.1",
     "formik": "2.2.9",
     "jsonwebtoken": "8.5.1",
+    "katex": "0.13.18",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "11.4.0",
-    "react-mathjax-preview": "2.2.3",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.1",
