--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,9 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "12.0.5",
-    "@react-native-async-storage/async-storage": "1.15.8",
-    "@react-native-community/masked-view": "0.1.11",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "6.0.5",
     "@react-navigation/drawer": "6.1.4",
     "@react-navigation/native": "6.0.2",
@@ -18,32 +18,32 @@
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "42.0.3",
-    "expo-blur": "9.0.3",
-    "expo-clipboard": "1.1.0",
-    "expo-constants": "11.0.2",
-    "expo-font": "9.2.1",
-    "expo-linear-gradient": "9.2.0",
-    "expo-status-bar": "1.0.4",
+    "expo-blur": "~9.0.3",
+    "expo-clipboard": "~1.1.0",
+    "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-status-bar": "~1.0.4",
     "formik": "2.2.9",
-    "lottie-react-native": "4.1.0",
+    "lottie-react-native": "4.0.2",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-mathjax-html-to-svg": "1.0.6",
-    "react-native-reanimated": "2.2.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "3.7.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "8.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.13.12",
     "styled-components": "5.3.1",
     "styled-theming": "2.2.0",
     "yup": "0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "7.15.5",
+    "@babel/core": "~7.9.0",
     "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
     "eslint": "7.32.0",
