--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "2.4.3",
     "compression": "1.7.4",
     "cors": "2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "fast-crc32c": "2.0.0",
