--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "6.0.5",
     "@react-navigation/drawer": "6.1.4",
+    "@react-navigation/material-top-tabs": "6.0.4",
     "@react-navigation/native": "6.0.2",
     "@react-navigation/stack": "6.0.7",
     "axios": "0.21.4",
@@ -32,10 +33,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-mathjax-html-to-svg": "1.0.6",
+    "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "3.1.1",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "5.3.1",
