:bug: Arrumando timezone do sequelize

--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -11,6 +11,7 @@ DB_DIALECT="mysql"
 
 SECRET="SECRET_AQUI"
 EXPIRE_IN="DIAS_PARA_EXPIRAR_TOKEN"
+TIMEZONE="+03:00"
 
 # LDAP CONFIG
 LDAP_URL="URL_LDAP_AQUI"
