--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:lts-alpine
+FROM node:17.1.0-alpine3.12
 
 RUN mkdir -p /home/node/api/node_modules && chown -R node:node /home/node/api
 
