--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:lts-alpine
+FROM node:16.13.0-alpine3.14
 
 RUN mkdir -p /home/node/react/node_modules && chown -R node:node /home/node/react
 
