--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:lts-alpine as builder
+FROM node:16.13.0-alpine3.14 as builder
 RUN mkdir -p /home/node/react_prod/node_modules && chown -R node:node /home/node/react_prod
 
 WORKDIR /home/node/react_prod
@@ -15,7 +15,7 @@ ENV GENERATE_SOURCEMAP false
 
 RUN yarn build
 
-FROM nginx:1.21.1-alpine
+FROM nginx:1.21.4-alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=builder /home/node/react_prod/build .
 RUN rm /etc/nginx/conf.d/default.conf
