--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,28 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/eslint-parser": "7.15.7",
-    "@craco/craco": "6.3.0",
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@material-ui/core": "5.0.0-beta.0",
-    "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.60",
+    "@babel/eslint-parser": "7.16.5",
+    "@craco/craco": "6.4.3",
+    "@mui/icons-material": "5.3.1",
+    "@mui/material": "5.3.1",
+    "@mui/styled-engine-sc": "5.3.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
     "@testing-library/user-event": "13.2.1",
     "axios": "0.21.4",
-    "compress.js": "1.2.1",
+    "compress.js": "1.2.2",
     "craco-alias": "3.0.1",
     "formik": "2.2.9",
-    "jsonwebtoken": "8.5.1",
-    "katex": "0.13.18",
+    "katex": "0.15.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "11.4.0",
     "react-router-dom": "6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "styled-components": "5.3.1",
     "web-vitals": "2.1.0",
     "yup": "0.32.9"
@@ -54,15 +51,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.26.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.4.1"
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.5.1"
   }
 }
