--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,23 +8,23 @@
     "@mui/icons-material": "5.3.1",
     "@mui/material": "5.3.1",
     "@mui/styled-engine-sc": "5.3.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.0",
-    "@testing-library/user-event": "13.2.1",
-    "axios": "0.21.4",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "0.25.0",
     "compress.js": "1.2.2",
     "craco-alias": "3.0.1",
     "formik": "2.2.9",
     "katex": "0.15.2",
-    "prop-types": "15.7.2",
+    "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "11.4.0",
-    "react-router-dom": "6.1.1",
+    "react-dropzone": "11.5.1",
+    "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
-    "styled-components": "5.3.1",
-    "web-vitals": "2.1.0",
-    "yup": "0.32.9"
+    "styled-components": "5.3.3",
+    "web-vitals": "2.1.4",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "craco start",
@@ -51,15 +51,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "8.7.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "2.5.1"
   }
 }
