:recycle: Refatorando codigo.

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,12 +20,14 @@
     "babel-plugin-module-resolver": "4.1.0",
     "expo": "42.0.3",
     "expo-blur": "~9.0.3",
+    "expo-cli": "^5.1.1",
     "expo-clipboard": "~1.1.0",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "formik": "2.2.9",
+    "global": "^4.4.0",
     "lottie-react-native": "4.0.2",
     "prop-types": "15.7.2",
     "react": "16.13.1",
