:sparkles: Arrumando unmounting de quizzes.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
-# upstream frontend {
-#     server frontend:80;
-# }
+upstream frontend {
+    server frontend:80;
+}
 
 upstream backend {
     server backend:3333;
@@ -9,16 +9,16 @@ upstream backend {
 server {
     listen 3333;
 
-    # location / {
-    #     proxy_pass  http://frontend;
-    # }
-    # location /sockjs-node {
-    #     proxy_pass http://frontend;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     proxy_set_header Host $host;
-    # }
+    location / {
+        proxy_pass  http://frontend;
+    }
+    location /sockjs-node {
+        proxy_pass http://frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
 
     # ignore cache frontend
     location ~* (service-worker\.js)$ {
