:package: Atualizando pacotes.

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,37 +20,37 @@
     "@react-spring/native": "9.4.3",
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
-    "expo": "42.0.3",
-    "expo-blur": "~9.0.3",
+    "expo": "^44.0.0",
+    "expo-blur": "~11.0.0",
     "expo-cli": "^5.1.1",
-    "expo-clipboard": "~1.1.0",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-status-bar": "~1.0.4",
+    "expo-clipboard": "~2.1.0",
+    "expo-constants": "~13.0.1",
+    "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-status-bar": "~1.2.0",
     "formik": "2.2.9",
     "global": "^4.4.0",
-    "lottie-react-native": "4.0.2",
+    "lottie-react-native": "5.0.1",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-mathjax-html-to-svg": "1.0.6",
-    "react-native-pager-view": "5.0.12",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-pager-view": "5.4.9",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "3.1.1",
     "react-native-vector-icons": "8.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "styled-components": "5.3.1",
     "styled-theming": "2.2.0",
     "yup": "0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
     "eslint": "7.32.0",
