:bug: Arrumando bug do lazy loading das stacks.

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,14 +9,14 @@
     "react-devtool": "react-devtools"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "6.0.5",
-    "@react-navigation/drawer": "6.1.4",
-    "@react-navigation/material-top-tabs": "6.0.4",
-    "@react-navigation/native": "6.0.2",
-    "@react-navigation/stack": "6.0.7",
+    "@expo/vector-icons": "12.0.5",
+    "@react-native-async-storage/async-storage": "1.15.0",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/material-top-tabs": "6.2.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/stack": "6.2.1",
     "@react-spring/native": "9.4.3",
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
@@ -29,8 +29,8 @@
     "expo-status-bar": "~1.2.0",
     "formik": "2.2.9",
     "global": "^4.4.0",
-    "lottie-react-native": "5.0.1",
-    "prop-types": "15.7.2",
+    "lottie-react-native": "^5.0.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -41,12 +41,12 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-tab-view": "3.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "0.17.1",
-    "styled-components": "5.3.1",
+    "styled-components": "^5.3.5",
     "styled-theming": "2.2.0",
-    "yup": "0.32.9"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
