:sparkles: Arrumando bugs nas listagens de quizzes do mobile.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,6 +11,7 @@
     ],
     "splash": {
       "image": "./assets/splash.png",
+      "backgroundColor": "#EEBB24",
       "resizeMode": "cover"
     },
     "updates": {
