--- a/docker-compose-prod-only-api-example.yml
+++ b/docker-compose-prod-only-api-example.yml
@@ -14,10 +14,8 @@ services:
       - '3308:3308'
     volumes:
       - ./mysql_prod:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=SENHA_DO_USUARIO_MYSQL_AQUI
-      - MYSQL_PASSWORD=SENHA_DO_BANCO
-      - MYSQL_DATABASE=NOME_DO_BANCO
+    env_file:
+      - ./mysql.env
     networks:
       - app-tier 
 
@@ -34,22 +32,8 @@ services:
     depends_on:
       - db_prod
     restart: on-failure
-    environment:
-      - DB_HOST=db_prod
-      - DB_PORT=3308
-      - DB_USER=root
-      - DB_PASS=SENHA_DO_BANCO
-      - DB_NAME=NOME_DO_BANCO
-      - DB_DIALECT=mysql
-      - APP_URL=http://localhost:3334
-      - PORT=3334
-      - SECRET=SECRET_AQUI
-      - EXPIRE_IN=DIAS_PARA_EXPIRAR_TOKEN
-      - REFRESH_EXPIRATION=   
-      - TIMEZONE=+03:00
-      - LDAP_URL=
-      - LDAP_USERNAME=
-      - LDAP_PASSWORD=
+    env_file:
+      - ./backend/.env
     networks:
       - app-tier
 
