:sparkles: Adicionando variavel no .env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,6 @@ TIMEZONE="+03:00"
 LDAP_URL="URL_LDAP_AQUI"
 LDAP_USERNAME="USUARIO_LDAP"
 LDAP_PASSWORD="SENHA_LDAP"
+
+NODE_ENV=development
+PORT=3333
