:wrench: Fazendo correções no projeto.

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "@react-spring/native": "9.4.3",
     "axios": "0.21.4",
     "babel-plugin-module-resolver": "4.1.0",
+    "eslint-plugin-react-perf": "3.3.1",
     "expo": "^44.0.0",
     "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
@@ -62,7 +63,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.0",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "2.4.1",
     "react-devtools": "4.24.1"
   },
