:wrench: Fazendo correções no projeto.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,11 +12,14 @@ SECRET="SECRET_AQUI"
 EXPIRE_IN="DIAS_PARA_EXPIRAR_TOKEN"
 TIMEZONE="+03:00"
 
-
 # LDAP CONFIG
 LDAP_URL="URL_LDAP_AQUI"
 LDAP_USERNAME="USUARIO_LDAP"
 LDAP_PASSWORD="SENHA_LDAP"
+
+GOOGLE_CLIENT_ID="GOOGLE_CLIENT_ID"
+GOOGLE_CLIENT_SECRET="GOOGLE_CLIENT_SECRET"
+GOOGLE_OAUTH_REDIRECT_URL="GOOGLE_OAUTH_REDIRECT_URL"
 
 NODE_ENV=development
 PORT=3333
