--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-prettier": "4.0.0",
     "jest": "27.5.1",
+    "mysql": "2.18.1",
     "nodemon": "2.0.12",
     "prettier": "2.4.1",
     "supertest": "6.2.2"
