--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,6 @@ REACT_APP_BASE_URL=http://localhost:3333
 REACT_APP_TOKEN_PEXELS=TOKEN
 PORT=3000
 NODE_ENV=development
+
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
