--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-config": "0.3.16",
-    "@expo/vector-icons": "12.0.5",
-    "@react-native-async-storage/async-storage": "1.15.0",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/drawer": "6.4.1",
@@ -23,18 +23,21 @@
     "babel-plugin-module-resolver": "4.1.0",
     "eslint-plugin-react-perf": "3.3.1",
     "expo": "^44.0.0",
+    "expo-auth-session": "~3.5.0",
     "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
     "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~10.1.0",
     "formik": "2.2.9",
     "global": "^4.4.0",
-    "lottie-react-native": "^5.0.1",
+    "lottie-react-native": "5.0.1",
     "prop-types": "^15.8.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "18.0.0",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-mathjax-html-to-svg": "1.0.6",
@@ -46,13 +49,13 @@
     "react-native-svg-transformer": "0.14.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "8.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5",
     "styled-theming": "2.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "babel-eslint": "10.1.0",
     "babel-preset-react-native": "4.0.1",
     "eslint": "7.32.0",
