:rocket: Atualizando .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,15 @@
-APP_URL=http://localhost:3333
+APP_URL="URL para acesso da API (usado para gerar links de imagens)"
 
-DB_HOST="HOST_AQUI"
-DB_PORT="PORTA_MYSQL_AQUI"
-DB_USER="USUARIO_MYSQL_AQUI"
-DB_PASS="SENHA_DO_BANCO"
-DB_NAME="NOME_DO_BANCO"
-DB_DIALECT="mysql"
+DB_HOST="Endereço do servidor do banco de dados (SGBD)"
+DB_PORT="Porta do servidor do banco de dados (SGBD)"
+DB_USER="Usuário do banco de dados"
+DB_PASS="Senha do banco de dados"
+DB_NAME="Nome do banco de dados"
+DB_DIALECT="Tipo de SGBD utilizado, por exemplo: mysql"
 
-SECRET="SECRET_AQUI"
-EXPIRE_IN="DIAS_PARA_EXPIRAR_TOKEN"
-TIMEZONE="+03:00"
+SECRET="Chave utilizada para geração do JWT token"
+EXPIRE_IN="Tempo de validade do token, por exemplo: 2d"
+TIMEZONE="Fuso horário utilizado pelo SGBD, por exemplo: +03:00"
 
-NODE_ENV=development
-PORT=3333
+NODE_ENV="Ambiente de execução: development ou production"
+PORT="Porta de execução do servidor. Exemplo: 3333"
