:rocket: Atualizando .env.example do frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,6 @@
-REACT_APP_BASE_URL=http://localhost:3333
-REACT_APP_TOKEN_PEXELS=TOKEN
-PORT=3000
-NODE_ENV=development
+REACT_APP_BASE_URL="URL da API (Backend)"
+REACT_APP_TOKEN_PEXELS="Token da API Pexels, usada para buscar imagens"
+PORT="Porta de execução do servidor. Exemplo: 3000"
+NODE_ENV="Ambiente de execução: development ou production"
 
-GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
-GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
-
-REACT_APP_AMBIENT=AMBIENT
+GOOGLE_CLIENT_ID="Google Client ID, usado para autenticação com o Google"
